--- a/docs/API Reference/Components/ProductHandler.html
+++ b/docs/API Reference/Components/ProductHandler.html
@@ -99,7 +99,7 @@
       </div>
       <div class="site-main">
         <div class="article"><div class="article"><h1><font color="#AAA">class </font>ProductHandler</h1></div>
-<figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">sealed</span> <span class="keyword">class</span> <span class="title">ProductHandler</span> &#123; <span class="keyword">get</span>; &#125;</span><br></pre></td></tr></table></figure>
+<figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">sealed</span> <span class="keyword">class</span> <span class="title">ProductHandler</span></span><br></pre></td></tr></table></figure>
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK.Components</font></td></tr></table></html>
 <h5 id="description">Description:</h5>
 <p><font color="#666">This class includes the overall information of a product.</font></p>
@@ -135,13 +135,23 @@
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK</font></td></tr></table></html>
 <h5 id="description-v5">Description:</h5>
 <p><font color="#666">A class contains a product type of DJI products.</font></p>
-</div>
+<h5 id="struct-members">Struct Members:</h5>
+<html><table class="table-inline-parameters"><tr valign="top"><td><font color="#70BF41"><a href="#value_producttypemsg_value_inline"></a> <font color="#000">ProductType value</font></font></td><td><font color="#666">The actual value of the class.</font></td></tr></table></html></div>
+<div class="api-row" id="value_producttype"><div class="api-col left"></div><div class="api-col middle" style="color:#AAA">enum</div><div class="api-col right"><a class="trigger" href="#value_producttype_inline">ProductType</a></div></div><div class="inline-doc" id="value_producttype_inline" <blockquote="">
+<div class="article"><h6><font color="#AAA">enum </font>ProductType</h6></div>
+
+<figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">enum</span> ProductType</span><br></pre></td></tr></table></figure>
+<html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK</font></td></tr></table></html>
+<h5 id="description-v6">Description:</h5>
+<p><font color="#666">The enums that describe differnt DJI products.</font></p>
+<h5 id="enum-members">Enum Members:</h5>
+<html><table class="table-inline-parameters"><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_none_inline"></a>NONE</font></td><td><font color="#666">None. No product is connected.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_osmo_inline"></a>OSMO</font></td><td><font color="#666">Osmo.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_p4_inline"></a>P4</font></td><td><font color="#666">Phantom 4.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_mavic_pro_inline"></a>MAVIC_PRO</font></td><td><font color="#666">Mavic Pro.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_osmo_pro_inline"></a>OSMO_PRO</font></td><td><font color="#666">Osmo Pro.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_osmo_raw_inline"></a>OSMO_RAW</font></td><td><font color="#666">Osmo RAW.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_osmo_plus_inline"></a>OSMO_PLUS</font></td><td><font color="#666">Osmo Plus.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_p4p_inline"></a>P4P</font></td><td><font color="#666">Phantom 4 Pro.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_p4a_inline"></a>P4A</font></td><td><font color="#666">Phantom 4 Advanced.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_p4r_inline"></a>P4R</font></td><td><font color="#666">Phantom 4 RTK.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_mavic_air_inline"></a>MAVIC_AIR</font></td><td><font color="#666">Mavic Air.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_mavic_2_inline"></a>MAVIC_2</font></td><td><font color="#666">Mavic 2.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_p4p_v2_inline"></a>P4P_V2</font></td><td><font color="#666">Phantom 4 Pro V2.</font></td></tr><tr valign="top"><td><font color="#70BF41"><a href="#value_producttype_unknown_inline"></a>UNKNOWN</font></td><td><font color="#666">Unknown.</font></td></tr></table></html></div>
 <div class="api-row" id="delegate_producttypemsgchangedeventhandler"><div class="api-col left">Delegate</div><div class="api-col middle" style="color:#AAA">delegate</div><div class="api-col right"><a class="trigger" href="#delegate_producttypemsgchangedeventhandler_inline">ProductTypeMsgChangedEventHandler</a></div></div><div class="inline-doc" id="delegate_producttypemsgchangedeventhandler_inline" <blockquote="">
 <div class="article"><h6><font color="#AAA">delegate </font>ProductTypeMsgChangedEventHandler</h6></div>
 
 <figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="function"><span class="keyword">delegate</span> <span class="keyword">void</span> <span class="title">ProductTypeMsgChangedEventHandler</span>(<span class="params"><span class="keyword">object</span> sender, ProductTypeMsg? <span class="keyword">value</span></span>)</span></span><br></pre></td></tr></table></figure>
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK</font></td></tr></table></html>
-<h5 id="description-v6">Description:</h5>
+<h5 id="description-v7">Description:</h5>
 <p><font color="#666">A delegate type used to subscribe the updated values in type <code><a href="../Components/ProductHandler.html#value_producttypemsg">ProductTypeMsg</a></code>.</font></p>
 </div>
 <div class="api-row" id="producthandler_getproducttypeasync"><div class="api-col left">Methods</div><div class="api-col middle" style="color:#AAA">method</div><div class="api-col right"><a class="trigger" href="#producthandler_getproducttypeasync_inline">GetProductTypeAsync</a></div></div><div class="inline-doc" id="producthandler_getproducttypeasync_inline" <blockquote="">
@@ -149,7 +159,7 @@
 
 <figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">async</span> Task&lt;ResultValue&lt;ProductTypeMsg?&gt;&gt; GetProductTypeAsync()</span><br></pre></td></tr></table></figure>
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK.Components</font></td></tr></table></html>
-<h5 id="description-v7">Description:</h5>
+<h5 id="description-v8">Description:</h5>
 <p><font color="#666">Gets the detail product type of the connected aircraft. Returns <code><a href="../Components/ProductHandler.html#value_producttype_unknown">UNKNOWN</a></code> if connected aircraft is not recognized by SDK yet.</font></p>
 <h5 id="return">Return:</h5>
 <html><table class="table-inline-parameters"><tr valign="top"><td><font color="#70BF41">async Task&lt;ResultValue&lt;ProductTypeMsg?&gt;&gt;</font></td><td><font color="#666"><i>A <code>Task&lt;ResultValue&lt;ProductTypeMsg?&gt;&gt;</code> object.</i></font></td></tr></table></html></div>
@@ -158,7 +168,7 @@
 
 <figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">async</span> Task&lt;ResultValue&lt;BoolMsg?&gt;&gt; GetConnectionAsync()</span><br></pre></td></tr></table></figure>
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK.Components</font></td></tr></table></html>
-<h5 id="description-v8">Description:</h5>
+<h5 id="description-v9">Description:</h5>
 <p><font color="#666">Determines if the product is connected or not.</font></p>
 <h5 id="return-v2">Return:</h5>
 <html><table class="table-inline-parameters"><tr valign="top"><td><font color="#70BF41">async Task&lt;ResultValue&lt;BoolMsg?&gt;&gt;</font></td><td><font color="#666"><i>A <code>Task&lt;ResultValue&lt;BoolMsg?&gt;&gt;</code> object.</i></font></td></tr></table></html></div>
@@ -167,32 +177,32 @@
 
 <figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">async</span> Task&lt;ResultValue&lt;StringMsg?&gt;&gt; GetSerialNumberAsync()</span><br></pre></td></tr></table></figure>
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK.Components</font></td></tr></table></html>
-<h5 id="description-v9">Description:</h5>
+<h5 id="description-v10">Description:</h5>
 <p><font color="#666">This interface is invalid for a product handler.</font></p>
 <h5 id="return-v3">Return:</h5>
 <html><table class="table-inline-parameters"><tr valign="top"><td><font color="#70BF41">async Task&lt;ResultValue&lt;StringMsg?&gt;&gt;</font></td><td><font color="#666"><i>A <code>Task&lt;ResultValue&lt;StringMsg?&gt;&gt;</code> object.</i></font></td></tr></table></html></div>
-<div class="api-row" id="producthandler_producttypechangedpushevent"><div class="api-col left">Event</div><div class="api-col middle" style="color:#AAA">event</div><div class="api-col right"><a class="trigger" href="#producthandler_producttypechangedpushevent_inline">ProductTypeMsgChangedEventHandler</a></div></div><div class="inline-doc" id="producthandler_producttypechangedpushevent_inline" <blockquote="">
-<div class="article"><h6><font color="#AAA">event </font>ProductTypeMsgChangedEventHandler</h6></div>
+<div class="api-row" id="producthandler_producttypechangedpushevent"><div class="api-col left">Event</div><div class="api-col middle" style="color:#AAA">event</div><div class="api-col right"><a class="trigger" href="#producthandler_producttypechangedpushevent_inline">ProductTypeChanged</a></div></div><div class="inline-doc" id="producthandler_producttypechangedpushevent_inline" <blockquote="">
+<div class="article"><h6><font color="#AAA">event </font>ProductTypeChanged</h6></div>
 
 <figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">event</span> ProductTypeMsgChangedEventHandler ProductTypeChanged</span><br></pre></td></tr></table></figure>
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK.Components</font></td></tr></table></html>
-<h5 id="description-v10">Description:</h5>
+<h5 id="description-v11">Description:</h5>
 <p><font color="#666">Subscribe the event to receive changes of the product type. Returns <code><a href="../Components/ProductHandler.html#value_producttype_unknown">UNKNOWN</a></code> if connected aircraft is not recognized by SDK yet.</font></p>
 </div>
-<div class="api-row" id="producthandler_connectionchangedpushevent"><div class="api-col left"></div><div class="api-col middle" style="color:#AAA">event</div><div class="api-col right"><a class="trigger" href="#producthandler_connectionchangedpushevent_inline">BoolMsgChangedEventHandler</a></div></div><div class="inline-doc" id="producthandler_connectionchangedpushevent_inline" <blockquote="">
-<div class="article"><h6><font color="#AAA">event </font>BoolMsgChangedEventHandler</h6></div>
+<div class="api-row" id="producthandler_connectionchangedpushevent"><div class="api-col left"></div><div class="api-col middle" style="color:#AAA">event</div><div class="api-col right"><a class="trigger" href="#producthandler_connectionchangedpushevent_inline">ConnectionChanged</a></div></div><div class="inline-doc" id="producthandler_connectionchangedpushevent_inline" <blockquote="">
+<div class="article"><h6><font color="#AAA">event </font>ConnectionChanged</h6></div>
 
 <figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">event</span> BoolMsgChangedEventHandler ConnectionChanged</span><br></pre></td></tr></table></figure>
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK.Components</font></td></tr></table></html>
-<h5 id="description-v11">Description:</h5>
+<h5 id="description-v12">Description:</h5>
 <p><font color="#666">Subscribe the event to receive the product's connection change.</font></p>
 </div>
-<div class="api-row" id="producthandler_serialnumberchangedpushevent"><div class="api-col left"></div><div class="api-col middle" style="color:#AAA">event</div><div class="api-col right"><a class="trigger" href="#producthandler_serialnumberchangedpushevent_inline">StringMsgChangedEventHandler</a></div></div><div class="inline-doc" id="producthandler_serialnumberchangedpushevent_inline" <blockquote="">
-<div class="article"><h6><font color="#AAA">event </font>StringMsgChangedEventHandler</h6></div>
+<div class="api-row" id="producthandler_serialnumberchangedpushevent"><div class="api-col left"></div><div class="api-col middle" style="color:#AAA">event</div><div class="api-col right"><a class="trigger" href="#producthandler_serialnumberchangedpushevent_inline">SerialNumberChanged</a></div></div><div class="inline-doc" id="producthandler_serialnumberchangedpushevent_inline" <blockquote="">
+<div class="article"><h6><font color="#AAA">event </font>SerialNumberChanged</h6></div>
 
 <figure class="highlight csharp"><table><tr><td class="code"><pre><span class="line"><span class="keyword">event</span> StringMsgChangedEventHandler SerialNumberChanged</span><br></pre></td></tr></table></figure>
 <html><table class="table-supportedby"><tr valign="top"><td width="15%"><font color="#999"><i>Declaration:</i></font></td><td width="85%"><font color="#999">DJI.WindowsSDK.Components</font></td></tr></table></html>
-<h5 id="description-v12">Description:</h5>
+<h5 id="description-v13">Description:</h5>
 <p><font color="#666">This interface is invalid for a product handler.</font></p>
 </div>
 
