--- a/Sample Code/DJIWindowsSDKSample/UserAccount/UserAccountPage.xaml
+++ b/Sample Code/DJIWindowsSDKSample/UserAccount/UserAccountPage.xaml
@@ -43,7 +43,7 @@
 
                         <TextBlock FontSize="30" Margin="0,10,0,0" Style="{StaticResource TitleTextBlockStyle}"> Logout:</TextBlock>
                         <TextBlock Margin="0,6,0,0" Style="{StaticResource BodyTextBlockStyle}"> Logout your DJI account.</TextBlock>
-                        <Button Margin="0,6,0,0" Name="logoutButton" Click="logoutButton_Click">Login</Button>
+                        <Button Margin="0,6,0,0" Name="logoutButton" Click="logoutButton_Click">Logout</Button>
 
                     </StackPanel>
 
