Adding landing button in UI

--- a/Sample Code/DJISampleSources/ComponentHandling/ComponentHandingPage.xaml
+++ b/Sample Code/DJISampleSources/ComponentHandling/ComponentHandingPage.xaml
@@ -72,6 +72,7 @@
                         *Note* DO NOT click this button when it is dangerous for aircraft to takeoff.
                         </TextBlock>
                         <Button Margin="0,8,0,0" Command="{Binding StartTakeoff}">Start Auto Takeoff</Button>
+                        <Button Margin="0,8,0,0" Command="{Binding StartLanding}">Start Auto Landing</Button>
                     </StackPanel>
                 </StackPanel>
 
